--- a/DZ7.ipynb
+++ b/DZ7.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "##### 1. Даны две независимые выборки. Не соблюдается условие нормальности\n",
+    "#### 1. Даны две независимые выборки. Не соблюдается условие нормальности\n",
     "    x1 380,420, 290\n",
     "    y1 140,360,200,900\n",
     "<p>Сделайте вывод по результатам, полученным с помощью функции"
@@ -15,20 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "d05b4524-4418-4131-b044-48cf3279cb10",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import scipy.special as sc\n",
-    "import scipy.stats as stats\n",
-    "from scipy.stats import norm"
+    "import scipy.stats as stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ab71c5b2-8858-4fae-be18-3b00ac0bf698",
    "metadata": {},
    "outputs": [
@@ -38,7 +36,7 @@
        "MannwhitneyuResult(statistic=8.0, pvalue=0.6285714285714286)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,6 +59,7 @@
    "cell_type": "markdown",
    "id": "1b30c27a-0377-4e48-b5c9-6e35625d5c2a",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -104,6 +103,7 @@
    "cell_type": "markdown",
    "id": "3ad6045b-1b41-4a17-a197-84e0fb11a9a0",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -154,26 +154,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "bbcd5a20-7a91-4854-9fec-7e871c842c41",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'tuple'>\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "KruskalResult(statistic=5.465564058257224, pvalue=0.0650380998590494)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +175,6 @@
     "gr1 = 56, 60, 62, 55, 71, 67, 59, 58, 64, 67\n",
     "gr2 = 57, 58, 69, 48, 72, 70, 68, 71, 50, 53\n",
     "gr3 = 57, 67, 49, 48, 47, 55, 66, 51, 54\n",
-    "print(type(gr1))\n",
     "stats.kruskal(gr1, gr2, gr3)"
    ]
   },
@@ -191,13 +183,16 @@
    "id": "43df0832-d10e-4c0a-9cc7-8805df38c132",
    "metadata": {},
    "source": [
-    "<b>Вывод: статистически значимых различий в группах нет (при $\\alpha = 5%$%)."
+    "<b>Вывод: статистически значимых различий в группах нет (при $\\alpha = 5$%)."
    ]
   },
   {
    "cell_type": "markdown",
    "id": "f135845f-b2b8-43fe-9ace-f4cabc58d1d3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### 5. Заявляется, что партия изготавливается со средним арифметическим 2,5 см. Проверить данную гипотезу, если известно, что размеры изделий подчинены нормальному закону распределения. Объем выборки 10, уровень статистической значимости 5%\n",
     "    2.51, 2.35, 2.74, 2.56, 2.40, 2.36, 2.65, 2.7, 2.67, 2.34"
@@ -206,152 +201,20 @@
   {
    "cell_type": "markdown",
    "id": "847113cc-5f5d-4afe-8d18-aff52a5ea2b2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "$n = 10$ <br>\n",
     "$\\bar x = 2.53$ <br>\n",
     "$S^2 = \\frac{(2.51-2.53)^2+(2.35-2.53)^2+(2.74-2.53)^2+(2.56-2.53)+(2.40-2.53)^2\n",
     "+(2.36-2.53)^2+(2.65-2.53)^2+(2.7-2.53)+(2.67-2.53)+(2.34-2.53)^2}{10-1} = \\frac {0.02226}{9} = 0.0247$ <br>\n",
-    "$\\sigma = 0.157$"
+    "$\\sigma = 0.157$ <br>\n",
+    "$\\bar x - \\mu = 0.03$ <br>\n",
+    "$Z_{расч} = 0.03/(0.157/\\sqrt 10)=0.6$ <br>\n",
+    "При $\\alpha = 5$% правая граница Z-критерия 1.65, значит расчетное значение будет располагаться левее.<br>\n",
+    "#### Вывод: исходная (нулевая) гипотеза верна."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "b036ced9-2c8d-4865-90e4-b8d296beed40",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.5279999999999996"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = ([2.51, 2.35, 2.74, 2.56, 2.40, 2.36, 2.65, 2.7, 2.67, 2.34])\n",
-    "np.mean(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "1ffa9f2d-1071-453c-ac4f-bb349567eccd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.02472888888888891"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.var(x, ddof=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "86f1ab39-fe3b-47db-9684-ea6a0a94cecf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.2226000000000002"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "w = 2.53\n",
-    "z= [(w-i)**2 for i in x]\n",
-    "np.sum(z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "6a674bf4-21db-4165-9fdf-ae77b65271f4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.15726834816113933"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.sqrt (0.2226/9)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "c6efc955-6a04-4f88-b000-e2b7c7515b09",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.024649"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "0.157**2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "b18be04a-cbac-4c41-b4c9-f5e641d2b62f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.99396344, 0.99061329, 0.99692804, 0.99476639, 0.99180246,\n",
-       "       0.99086253, 0.99597541, 0.99653303, 0.99620744, 0.99035813])"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "norm.cdf(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4662794d-8f16-4011-a06b-12e13365eb7b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
