added more examples form Sem8

--- a/StatDZ_examp.ipynb
+++ b/StatDZ_examp.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "c4b0ffac-3f05-4954-bded-d24276c890ef",
    "metadata": {
     "tags": []
@@ -22,7 +22,8 @@
     "from scipy.stats import norm\n",
     "from scipy import stats\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -100,18 +101,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcfe5e0a-b27c-4b23-b544-743af427d588",
-   "metadata": {},
-   "source": [
-    "<b>ЕЛЕНА</b>, посмотрите пожалуйста решение вручную и то решение, которое считает Питон. Они отличаются, я хотел понять в чем дело."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "be2d05ca-7c89-4de0-be71-42a58d596237",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## ПРОБЛЕМНАЯ ЗАДАЧА"
+    "### ПРОБЛЕМНАЯ ЗАДАЧА"
    ]
   },
   {
@@ -249,8 +244,175 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d3e9265-3121-4d03-9f56-5f43a45d3410",
+   "id": "35d23de3-fc21-4201-84a1-0a036eeeee11",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Задача (семинар 8)\n",
+    "a = np.array([12, 10, 11, 19, 13, 11, 17, 15, 19, 14, 21, 18, 21, 11, 17, 14, 15, 17, 20, 19])<br>\n",
+    "b = np.array([11, 13, 18, 15, 17, 18, 10, 21, 26, 15, 11, 12, 15, 17, 10, 18, 18, 12,21, 20])<br>\n",
+    "*Провести двусторонний тест и ответить на вопрос, есть ли статистически значимые различия между средними 2х нормально распределенных генеральных совокупностей, представленных следующими независимыми выборками.<br>\n",
+    "**Уровень статистической значимости принять за 5%. Используйте функцию в Python.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e93592bd-1fac-4781-bf6e-8ea859f960b2",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([12, 10, 11, 19, 13, 11, 17, 15, 19, 14, 21, 18, 21, 11, 17, 14, 15, 17, 20, 19])\n",
+    "\n",
+    "b = np.array([11, 13, 18, 15, 17, 18, 10, 21, 26, 15, 11, 12, 15, 17, 10, 18, 18, 12,21, 20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2cfd8a38-376d-43bb-b6d5-c1c9edb088a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-0.1599663264228627, pvalue=0.8737549039369696)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.ttest_ind(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a66eca71-05af-4dd2-a2b0-a29540276df0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.0243941645751367"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.t.ppf(0.025, 38) # t-расчетное для ddof= 2*(n-1)= 38"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "bb775416-e403-41c4-a53e-ce61f033089d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4368774519684848"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.t.cdf(-0.1599663264228627, 38) ## площадь кривой нормального распределения ниже левой границы"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "84f7588e-1f56-4fba-a079-527192396314",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-0.1599663264228627, pvalue=0.5631225480315152)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##Односторонний t-тест гипотеза a>b\n",
+    "stats.ttest_ind(a, b, alternative='greater', equal_var=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5d7ad1a2-e2a3-4274-85b9-236478b51907",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-0.1599663264228627, pvalue=0.4368774519684848)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##Односторонний t-тест гипотеза a<b\n",
+    "stats.ttest_ind(a, b, alternative='less', equal_var=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94f812d8-c73a-40f1-a3fb-9e36c670064e",
+   "metadata": {},
+   "source": [
+    "**Спортсмен стреляет по мишени. Вероятность попадания в 1 сектор 0.4, во второй -0.3. Какова вероятность попадания в 1 ИЛИ 2 сектор.**\n",
+    "***\"ИЛИ\"*** - сложение вероятностей. Ответ 0.3+0.4 = **0.7**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f28c02da-9b9c-4a3a-ac40-97bb5f8c3b15",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "В группе 21 студент: 5 отличников, 10 хорошистов, 6 слабых. На предстоящем экзамене отлично могут получить только отличники, хорошисты с равной вероятностью могут получить хорошо или отлично, слабые - с одинаковой вероятностью могут получить хорошо, удовлетворительно или неуд. На экзамен вызывается наугад 1 студент. Какова вероятность, что он получит хорошо или отлично.\n",
+    "Ответ: $\\frac{5}{21}*1+\\frac{10}{21}*1+\\frac{6}{21}*\\frac{1}{3}$<br>\n",
+    "*для слабых вероятность искомого события 1/3 (если только \"хорошо\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61944ed3-bcb2-445c-b5d2-8268a1768171",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "Некоторое изделие выпускается 2-мя заводами. При этом объем продукции 2 завода в 3 раза превосходит объем продукции 1-го. Доля брака у 1-го - 2%, у 2-го - 1%. Изделие выпущено заводами за одинаковый промежуток времени. Изделия перемешали и отправили в продажу. Какова вероятность, что приобретенное изделие со 2-го завода, если оно бракованное?<br>\n",
+    "$P (A \\mid B) = \\frac{P(B \\mid A)*P(B)}{P(A)}$ *формула БАЙЕСА<br>\n",
+    "*A - брак, В - изделие со 2-го завода, P(B) = 3/4 (0.75), P(A|B) = 0.01, P(A) = 0.25*0.02+0.75*0.01 = 0.0125 (вероятность вытащить * вероятность брака)<br>\n",
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d3e9265-3121-4d03-9f56-5f43a45d3410",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Correlation"
    ]
@@ -393,7 +555,9 @@
   {
    "cell_type": "markdown",
    "id": "bfde9d31-7258-4f04-ba4c-f4e7d44844e0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Covariation"
    ]
@@ -768,14 +932,6 @@
     "for i in range(len(values)):\n",
     "    print(i+1,'-',ranks[i],'-',values[indices[i]])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3edcd25d-990e-4728-9c45-c249486962fd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
